package fabricas;

public interface Bebida {
    String crearBebida();
}
