package fabricas;

public interface Entrada {
    String crearEntrada();
}
