package fabricas;

public interface PlatoPrincipal {
    String crearPlatoPrincipal();
}