package fabricas;

public interface Postre {
    String crearPostre();
}
