package objetosConcretos.alimentos.gourmet;

import fabricas.PlatoPrincipal;

public class PlatoprincipalGour implements PlatoPrincipal{
    @Override
    public String crearPlatoPrincipal() {
        return "Creando plato principal";
    }
}
